# cmdval_salonapp

./: .env.example  .gitignore  README.md  backup.sh  deploy.sh  docker-compose.yml  restore.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250109_000000_001_initial_schema.py  20250110_000000_002_add_phototype_make_fields_optional.py  20250111_000000_003_add_optiskin_features.py  20250111_100000_004_refactor_questionnaire_to_preconsultation.py  20250111_200000_005_patient_first_workflow.py  20250202_000000_006_zone_preconsultation_fields.py  20250202_100000_007_session_structured_params.py  20250202_200000_008_packs_subscriptions.py  20250202_210000_009_paiements.py  20250202_220000_010_promotions.py  20250202_230000_011_schedule_waiting_queue.py  20250203_000000_012_boxes_and_assignments.py  20250211_000000_013_add_date_naissance_to_preconsultation.py  20250211_100000_014_add_patient_telephone_to_schedule.py  20250211_200000_015_payment_methods.py  20250212_000000_016_patient_documents.py  20250212_100000_017_document_templates.py  20250217_000000_018_add_commune_wilaya_text_dates.py  20250217_100000_019_add_zone_ids_to_schedule.py  20250217_200000_020_add_new_permissions_to_roles.py  20250218_100000_021_simplify_preconsultation_status.py  20250304_000000_022_pack_months_unlimited.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py  exceptions.py  logging.py  middleware.py  rate_limit.py
backend/src/db/: seed.py
backend/src/domain/: exceptions.py
backend/src/schemas/: auth.py  (+17 more)
(+268 files in other folders)
